--- a/order-dev.yml
+++ b/order-dev.yml
@@ -8,6 +8,11 @@ spring:
       url: jdbc:mysql://127.0.0.1:3306/spring_cloud_sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+  rabbitmq:
+    username: guest
+    password: guest
+    host: 192.168.99.100
+    port: 5672
 #改变ribbon负载均衡的机制
 #product:
 #  ribbon:
