--- a/order-dev.yml
+++ b/order-dev.yml
@@ -7,6 +7,11 @@ spring:
       username: root
       password: 123456
       url: jdbc:mysql://127.0.0.1:3306/spring_cloud_sell?characterEncoding=utf-8&useSSL=false
+   rabbitmq:
+    username: guest
+    password: guest
+    host: 192.168.99.100
+    port: 5672
   jpa:
     show-sql: true
   rabbitmq:
