--- a/product-dev.yml
+++ b/product-dev.yml
@@ -6,3 +6,8 @@ spring:
       url: jdbc:mysql://127.0.0.1:3306/spring_cloud_sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+  rabbitmq:
+    host: 192.168.99.100
+    username: guest
+    password: guest
+    port: 5672
