--- a/order-dev.yml
+++ b/order-dev.yml
@@ -14,6 +14,9 @@ spring:
     password: guest
     host: 192.168.99.100
     port: 5672
+  redis:
+    host: 192.168.99.100
+    port: 6379
 #改变ribbon负载均衡的机制
 #product:
 #  ribbon:
