--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -3,6 +3,7 @@ zuul:
     myProduct:
       path: /myProduct/**
       serviceId: product
+      sensitiveHeaders:
 #    product: /myProduct/**
   ignored-patterns:
     - /**/product/listForOrder
