--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -4,7 +4,7 @@ zuul:
     myProduct:
       path: /myProduct/**
       serviceId: product
-#      sensitiveHeaders:
+      sensitiveHeaders:
 #    product: /myProduct/**
   ignored-patterns:
     - /**/product/listForOrder
